<resources>
    <string name="app_name">DailyCollect</string>
    <string name="title_activity_liste_tournee">listeTournee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="driver_menu_home">Plannification</string>
    <string name="menu_today_tour">La tournée de la journée</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_quit">Se déconnecter</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_driver_activity_main">Chauffeur Main</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigate">Naviguer</string>
    <string name="detail">DETAILS</string>
    <string name="map">CARTE</string>
    <string name="tour">Tournée</string>
    <string name="modify">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="start_tour">Commencer la Tournée</string>
    <string name="add_tour">Ajouter une tournée</string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="validate_tour_label">Valider liste des points</string>
    <string name="next">Suivant</string>
    <string name="rider">Chauffeur</string>
    <string name="city">Ville</string>
    <string name="vehicle">Vehicule</string>
    <string name="failed_to_add">L\'ajout de la tournée a echoué.</string>
    <string name="added_successfuly">La Tournée a été ajoutée avec succes</string>
    <string name="title_activity_ovive_main">OviveMAinActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="client">Client</string>
    <string name="contact">Contact</string>
    <string name="social_reason">Raison Sociale</string>
    <string name="mail">Mail</string>
    <string name="tel">Tél</string>
    <string name="adress">Adresse</string>
    <string name="subscription_date">Souscrit le</string>
    <string name="contract_signing">Signature de Contrat</string>
    <string name="contract_until">Fin de Contrat</string>
    <string name="collect_day">Jour de collecte</string>
    <string name="title_activity_customer_main">CustomerMainActivity</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">Connexion</string>
    <string name="menu_tours">Tournées</string>
    <string name="menu_Drivers">Chauffeurs</string>
    <string name="menu_Clients">Clients</string>
    <string name="driver">Chauffeur</string>
    <string name="employement_date">Date d\'embauche</string>
    <string name="name_required">Name *</string>
    <string name="email_required">Email *</string>
    <string name="tel_required">Tél *</string>
    <string name="employement_date_and_format">Date d’ambauche : jj/mm/aaaa</string>
    <string name="create">Créer</string>
    <string name="add_driver">Ajouter un Chauffeur</string>
    <string name="driver_menu_liste_tours">Tournées</string>
</resources>
