<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.aylan.dailycollect.ovive.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/ovive_fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="fr.aylan.dailycollect.ovive.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/ovive_fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="fr.aylan.dailycollect.ovive.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/ovive_fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="fr.aylan.dailycollect.ovive.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/ovive_fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="fr.aylan.dailycollect.ovive.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/ovive_fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="fr.aylan.dailycollect.ovive.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/ovive_fragment_send" />
</navigation>