<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_tours" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_clients"
            android:title="@string/menu_Clients" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_driver"
            android:title="@string/menu_Drivers" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_quit" />
    </group>



</menu>
