<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.aylan.dailycollect.driver.ui.home.HomeFragment"
        android:label="@string/driver_menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="fr.aylan.dailycollect.driver.ui.gallery.GalleryFragment"
        android:label="@string/menu_today_tour"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="fr.aylan.dailycollect.driver.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_quit"
        tools:layout="@layout/fragment_slideshow" />


</navigation>