<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ovive.ui.drivers.AddDriver">

    <EditText
        android:id="@+id/etName"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="95dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/name_required"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etMail"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/email_required"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etTel"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/tel_required"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMail" />

    <EditText
        android:id="@+id/etEmploymentDate"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/employement_date_and_format"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTel" />


    <Spinner
        android:id="@+id/spinnerListvCitypinner"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/edit_text_background"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmploymentDate" />


    <Button
        android:id="@+id/btnCreate"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_border_back"
        android:backgroundTint="@color/oviveDarckGreen"
        android:onClick="createDriver"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_border_back"
        android:backgroundTint="@color/oviveLightBlue"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCreate" />



</androidx.constraintlayout.widget.ConstraintLayout>